Typo: replace `lasimulation` by `lalsuite` in recipe.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,7 +21,7 @@ requirements:
     - setuptools-scm >=8
     - pip
   run:
-    - lalsimulation
+    - lalsuite
     - python >={{ python_min }}
     - ipykernel
     - ipympl
